(lang dune 3.19)

(name cameldream)

(generate_opam_files true)

(source
 (github laeva-lady/cameldream))

(authors "Lyna (laeva-lady")

(license LICENSE)

(package
 (name cameldream)
 (synopsis "Log and Display your usage of apps")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
